--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="" />
+    <meta name="author" content="WhiteHacker" />
+    <meta name="keywords" content="Biznes">
+    <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
+    <meta property="og:site_name" content="Biznes" />
+    <!-- website name -->
+    <meta property="og:site" content="" />
+    <!-- website link -->
+    <meta property="og:title" content="" />
+    <!-- title shown in the actual shared post -->
+    <meta property="og:description" content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero esse commodi dolorem officia temporibus quae magni impedit autem sapiente repudiandae." />
+    <!-- description shown in the actual shared post -->
+    <meta property="og:image" content="./img/ceo_img.png" />
+    <!-- image link, make sure it's jpg -->
+    <meta property="og:url" content="" />
+    <!-- where do you want your post to link to -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <!-- to have large image post format in Twitter -->
     <title>Document</title>
     <link rel="stylesheet" href="./Css/style.css" />
     <link rel="stylesheet" href="./Css/font.css" />
