--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- where do you want your post to link to -->
     <meta name="twitter:card" content="summary_large_image" />
     <!-- to have large image post format in Twitter -->
-    <title>Document</title>
+    <title>Biznes</title>
     <link rel="stylesheet" href="./Css/style.css" />
     <link rel="stylesheet" href="./Css/font.css" />
   </head>
