--- a/index.html
+++ b/index.html
@@ -174,5 +174,8 @@
             </div>
         </div>
     </footer>
+    <footer style="display: flex;justify-content: center;">
+        <p>Created By WhiteHacker</p>
+    </footer>
   </body>
 </html>
